src/snapshots/prql__materializer__test__materialize-3.snap
---
source: src/materializer.rs
assertion_line: 530
expression: materialize(ast)?
---
Query:
  items:
    - Function:
        name: lag_day
        args:
          - x
        body:
          - SString:
              - String: lag_day_todo(
              - Expr:
                  Ident: x
              - String: )
    - Function:
        name: ret
        args:
          - x
        body:
          - Ident: x
          - Raw: /
          - Expr:
              - SString:
                  - String: lag_day_todo(
                  - Expr:
                      Ident: x
                  - String: )
          - Raw: "-"
          - Raw: "1"
          - Raw: +
          - Ident: dividend_return
    - Function:
        name: excess
        args:
          - x
        body:
          - Expr:
              - Ident: x
              - Raw: "-"
              - Ident: interest_rate
          - Raw: /
          - Raw: "252"
    - Function:
        name: if_valid
        args:
          - x
        body:
          - SString:
              - String: "IF(is_valid_price, "
              - Expr:
                  Ident: x
              - String: ", NULL)"
    - Pipeline:
        - From: prices
        - Derive:
            - lvalue: return_total
              rvalue:
                SString:
                  - String: "IF(is_valid_price, "
                  - Expr:
                      Expr:
                        - Terms:
                            - Ident: prices_adj
                            - Raw: /
                            - Expr:
                                - SString:
                                    - String: lag_day_todo(
                                    - Expr:
                                        Ident: prices_adj
                                    - String: )
                            - Raw: "-"
                            - Raw: "1"
                            - Raw: +
                            - Ident: dividend_return
                  - String: ", NULL)"
            - lvalue: return_usd
              rvalue:
                SString:
                  - String: "IF(is_valid_price, "
                  - Expr:
                      Expr:
                        - Terms:
                            - Ident: prices_usd
                            - Raw: /
                            - Expr:
                                - SString:
                                    - String: lag_day_todo(
                                    - Expr:
                                        Ident: prices_usd
                                    - String: )
                            - Raw: "-"
                            - Raw: "1"
                            - Raw: +
                            - Ident: dividend_return
                  - String: ", NULL)"
            - lvalue: return_excess
              rvalue:
                Terms:
                  - Expr:
                      - SString:
                          - String: "IF(is_valid_price, "
                          - Expr:
                              Expr:
                                - Terms:
                                    - Ident: prices_adj
                                    - Raw: /
                                    - Expr:
                                        - SString:
                                            - String: lag_day_todo(
                                            - Expr:
                                                Ident: prices_adj
                                            - String: )
                                    - Raw: "-"
                                    - Raw: "1"
                                    - Raw: +
                                    - Ident: dividend_return
                          - String: ", NULL)"
                      - Raw: "-"
                      - Ident: interest_rate
                  - Raw: /
                  - Raw: "252"
            - lvalue: return_usd_excess
              rvalue:
                Terms:
                  - Expr:
                      - SString:
                          - String: "IF(is_valid_price, "
                          - Expr:
                              Expr:
                                - Terms:
                                    - Ident: prices_usd
                                    - Raw: /
                                    - Expr:
                                        - SString:
                                            - String: lag_day_todo(
                                            - Expr:
                                                Ident: prices_usd
                                            - String: )
                                    - Raw: "-"
                                    - Raw: "1"
                                    - Raw: +
                                    - Ident: dividend_return
                          - String: ", NULL)"
                      - Raw: "-"
                      - Ident: interest_rate
                  - Raw: /
                  - Raw: "252"
        - Select:
            - Ident: date
            - Ident: sec_id
            - SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Terms:
                          - Ident: prices_adj
                          - Raw: /
                          - Expr:
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_adj
                                  - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: dividend_return
                - String: ", NULL)"
            - SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Terms:
                          - Ident: prices_usd
                          - Raw: /
                          - Expr:
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_usd
                                  - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: dividend_return
                - String: ", NULL)"
            - Terms:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Terms:
                                  - Ident: prices_adj
                                  - Raw: /
                                  - Expr:
                                      - SString:
                                          - String: lag_day_todo(
                                          - Expr:
                                              Ident: prices_adj
                                          - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: dividend_return
                        - String: ", NULL)"
                    - Raw: "-"
                    - Ident: interest_rate
                - Raw: /
                - Raw: "252"
            - Terms:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Terms:
                                  - Ident: prices_usd
                                  - Raw: /
                                  - Expr:
                                      - SString:
                                          - String: lag_day_todo(
                                          - Expr:
                                              Ident: prices_usd
                                          - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: dividend_return
                        - String: ", NULL)"
                    - Raw: "-"
                    - Ident: interest_rate
                - Raw: /
                - Raw: "252"

