src/snapshots/prql__materializer__test__materialize_2.snap
---
source: src/materializer.rs
expression: materialize(ast)?
---
Query:
  items:
    - Pipeline:
        - From: employees
        - Filter:
            - Ident: country
            - Raw: "="
            - String: USA
        - Derive:
            - lvalue: gross_salary
              rvalue:
                Terms:
                  - Ident: salary
                  - Raw: +
                  - Ident: payroll_tax
            - lvalue: gross_cost
              rvalue:
                Terms:
                  - Terms:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
                  - Raw: +
                  - Ident: benefits_cost
        - Filter:
            - Terms:
                - Terms:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
                - Raw: +
                - Ident: benefits_cost
            - Raw: ">"
            - Raw: "0"
        - Aggregate:
            by:
              - Ident: title
              - Ident: country
            calcs:
              - SString:
                  - String: AVG(
                  - Expr:
                      Ident: salary
                  - String: )
              - SString:
                  - String: SUM(
                  - Expr:
                      Ident: salary
                  - String: )
              - SString:
                  - String: AVG(
                  - Expr:
                      Terms:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  - String: )
              - SString:
                  - String: SUM(
                  - Expr:
                      Terms:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  - String: )
              - SString:
                  - String: AVG(
                  - Expr:
                      Terms:
                        - Terms:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
                  - String: )
            assigns:
              - lvalue: sum_gross_cost
                rvalue:
                  SString:
                    - String: SUM(
                    - Expr:
                        Terms:
                          - Terms:
                              - Ident: salary
                              - Raw: +
                              - Ident: payroll_tax
                          - Raw: +
                          - Ident: benefits_cost
                    - String: )
              - lvalue: ct
                rvalue:
                  SString:
                    - String: COUNT(
                    - Expr:
                        Raw: "*"
                    - String: )
        - Sort:
            - Ident: sum_gross_cost
        - Filter:
            - Ident: sum_gross_cost
            - Raw: ">"
            - Raw: "200"
        - Take: 20

