src/snapshots/prql__materializer__test__replace_variables-2.snap
---
source: src/materializer.rs
expression: "&fold.fold_item(ast)?"
---
Query:
  items:
    - Pipeline:
        - From: employees
        - Filter:
            - Ident: country
            - Raw: "="
            - String: USA
        - Derive:
            - lvalue: gross_salary
              rvalue:
                Terms:
                  - Ident: salary
                  - Raw: +
                  - Ident: payroll_tax
            - lvalue: gross_cost
              rvalue:
                Terms:
                  - Terms:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
                  - Raw: +
                  - Ident: benefits_cost
        - Filter:
            - Terms:
                - Terms:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
                - Raw: +
                - Ident: benefits_cost
            - Raw: ">"
            - Raw: "0"
        - Aggregate:
            by:
              - Ident: title
              - Ident: country
            calcs:
              - Terms:
                  - Ident: average
                  - Ident: salary
              - Terms:
                  - Ident: sum
                  - Ident: salary
              - Terms:
                  - Ident: average
                  - Terms:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
              - Terms:
                  - Ident: sum
                  - Terms:
                      - Ident: salary
                      - Raw: +
                      - Ident: payroll_tax
              - Terms:
                  - Ident: average
                  - Terms:
                      - Terms:
                          - Ident: salary
                          - Raw: +
                          - Ident: payroll_tax
                      - Raw: +
                      - Ident: benefits_cost
            assigns:
              - lvalue: sum_gross_cost
                rvalue:
                  Terms:
                    - Ident: sum
                    - Terms:
                        - Terms:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
              - lvalue: count
                rvalue:
                  Ident: count
        - Sort:
            - Ident: sum_gross_cost
        - Filter:
            - Ident: sum_gross_cost
            - Raw: ">"
            - Raw: "200"
        - Take: 20

